# graphic_graphic_surface

./: 433.diff:Zone.Identifier  463.diff  589.diff:Zone.Identifier  628.diff  628.diff:Zone.Identifier  AGENTS.md  OAT.xml  README.en.md  README.md  bundle.json  bundle.json.rej  graphic_surface_config.gni
.gitcode/: CODEOWNERS
buffer_handle/: BUILD.gn
buffer_handle/src/: buffer_handle.cpp
buffer_handle/test/unittest/: BUILD.gn  buffer_handle_test.cpp
sandbox/: BUILD.gn  (+1 more)
scoped_bytrace/test/unittest/: BUILD.gn  scoped_bytrace_test.cpp
surface/: BUILD.gn
surface/include/: buffer_client_producer.h  buffer_extra_data_impl.h  buffer_handle.h  buffer_log.h  buffer_manager.h  buffer_producer_listener.h  buffer_queue.h  buffer_queue_consumer.h  buffer_queue_producer.h  buffer_utils.h  consumer_surface.h  consumer_surface_delegator.h  delegator_adapter.h  metadata_helper.h  native_window.h  producer_surface.h  producer_surface_delegator.h  surface_buffer_impl.h  transact_surface_delegator_proxy.h  transact_surface_delegator_stub.h  tv_pq_metadata.h
surface/include/cross_platform/: external_window.h  surface_utils.h
surface/src/: buffer_client_producer.cpp  buffer_extra_data_impl.cpp  buffer_manager.cpp  buffer_queue.cpp  buffer_queue_consumer.cpp  buffer_queue_producer.cpp  buffer_utils.cpp  consumer_surface.cpp  consumer_surface_delegator.cpp  delegator_adapter.cpp  metadata_helper.cpp  native_buffer.cpp  native_window.cpp  producer_egl_surface.cpp  producer_surface.cpp  producer_surface_delegator.cpp  surface_buffer_impl.cpp  surface_tunnel_handle.cpp  surface_utils.cpp  transact_surface_delegator_proxy.cpp  transact_surface_delegator_stub.cpp
surface/src/cross_platform/: surface_utils.cpp
surface/src/mock/: egl_consumer_surface.cpp
surface/test/: BUILD.gn
surface/test/fuzztest/: BUILD.gn
surface/test/fuzztest/bufferqueue_fuzzer/: BUILD.gn  bufferqueue_fuzzer.cpp
surface/test/fuzztest/bufferqueueproducer_fuzzer/: BUILD.gn  bufferqueueproducer_fuzzer.cpp  bufferqueueproducer_fuzzer.h
surface/test/fuzztest/bufferutils_fuzzer/: BUILD.gn  bufferutils_fuzzer.cpp
surface/test/fuzztest/common/: data_generate.h
surface/test/fuzztest/nativebuffer_fuzzer/: BUILD.gn  nativebuffer_fuzzer.cpp  nativebuffer_fuzzer.h
surface/test/fuzztest/nativewindow_fuzzer/: BUILD.gn  nativewindow_fuzzer.cpp  nativewindow_fuzzer.h
surface/test/fuzztest/producersurface_fuzzer/: BUILD.gn  producersurface_fuzzer.cpp  producersurface_fuzzer.h
surface/test/fuzztest/surface_fuzzer/: BUILD.gn  surface_fuzzer.cpp
surface/test/fuzztest/surfacebuffer_fuzzer/: BUILD.gn  surfacebuffer_fuzzer.cpp
surface/test/fuzztest/surfaceconcurrent_fuzzer/: BUILD.gn  project.xml  surfaceconcurrent_fuzzer.cpp  surfaceconcurrent_fuzzer.h
surface/test/fuzztest/surfaceutils_fuzzer/: BUILD.gn  surfaceutils_fuzzer.cpp
surface/test/systemtest/: BUILD.gn  native_window_buffer_test.cpp  native_window_clean_cache_test.cpp  native_window_test.cpp  surface_ipc_test.cpp  surface_ipc_with_dropframe_test.cpp  surface_ipc_with_invaild_pts_test.cpp  surface_ipc_with_pts_test.cpp
surface/test/systemtest/attach_and_detach_buffer_test/: BUILD.gn  attach_and_detach_buffer_with_default_usage_test.cpp
surface/test/systemtest/buffer_with_present_timestamp_test/: BUILD.gn  surface_ipc_with_dropframe_test.cpp  surface_ipc_with_invaild_pts_test.cpp  surface_ipc_with_pts_test.cpp
surface/test/systemtest/clean_cache_test/: native_window_clean_cache_test.cpp
surface/test/systemtest/connect_and_disconnect_test/: surface_batch_opt_with_connect_strictly_test.cpp  surface_ipc_with_connect_strictly_test.cpp
surface/test/unittest/: BUILD.gn  buffer_client_producer_remote_test.cpp  buffer_manager_test.cpp  buffer_queue_consumer_test.cpp  buffer_queue_producer_remote_test.cpp  buffer_queue_producer_test.cpp  buffer_queue_test.cpp  buffer_shared_test.cpp  buffer_utils_test.cpp  consumer_surface_delegator_test.cpp  consumer_surface_test.cpp  delegator_adapter_test.cpp  delegator_mock.cpp  delegator_mock.h  metadata_helper_test.cpp  native_buffer_test.cpp  native_image_test.cpp  native_window_test.cpp  producer_surface_delegator_test.cpp  producer_surface_test.cpp  remote_object_mock.h  surface_buffer_impl_test.cpp  surface_test.cpp  surface_type_test.cpp  surface_utils_test.cpp  transact_surface_delegator_stub_test.cpp
sync_fence/: BUILD.gn
sync_fence/include/: acquire_fence_manager.h  frame_sched.h  sw_sync.h  sync_fence_tracker.h
sync_fence/src/: acquire_fence_manager.cpp  frame_sched.cpp  native_fence.cpp  sync_fence.cpp  sync_fence_tracker.cpp
sync_fence/test/fuzztest/: BUILD.gn
sync_fence/test/fuzztest/common/: data_generate.h
sync_fence/test/fuzztest/nativefence_fuzzer/: BUILD.gn  nativefence_fuzzer.cpp  nativefence_fuzzer.h
sync_fence/test/unittest/: BUILD.gn  acquire_fence_manager_test.cpp  frame_sched_test.cpp  native_fence_test.cpp  sync_fence_test.cpp  sync_fence_tracker_test.cpp
test/surface_test/systemtest/: BUILD.gn  native_window_buffer_test.cpp  native_window_test.cpp  surface_ipc_test.cpp
test/surface_test/unittest/: BUILD.gn  buffer_client_producer_remote_test.cpp  buffer_consumer_listener.h  buffer_queue_consumer_test.cpp  buffer_queue_producer_remote_test.cpp  buffer_queue_producer_test.cpp  buffer_queue_test.cpp  buffer_utils_test.cpp  consumer_surface_test.cpp  native_buffer_test.cpp  native_window_test.cpp  producer_surface_test.cpp  surface_fuzzer.cpp  surface_ipc_with_pts_test.cpp  transact_surface_delegator_stub_test.cpp
test_header/: BUILD.gn
utils/frame_report/: BUILD.gn
utils/frame_report/export/: frame_report.h  ring_array.h
utils/frame_report/src/: frame_report.cpp  ring_array.cpp
utils/frame_report/test/: BUILD.gn
utils/frame_report/test/fuzztest/: BUILD.gn
utils/hebc_white_list/: BUILD.gn  hebc_white_list.cpp  hebc_white_list.h
utils/hebc_white_list/test/: BUILD.gn
utils/rs_frame_report_ext/: BUILD.gn
utils/rs_frame_report_ext/include/: rs_frame_report_ext.h
utils/rs_frame_report_ext/src/: rs_frame_report_ext.cpp
utils/rs_frame_report_ext/test/: BUILD.gn
(+52 files in other folders)
