# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

graphic_surface_root = "//foundation/graphic/graphic_surface"

declare_args() {
  graphic_2d_ext_delegator = false
  graphic_2d_ext_delegator_gni = ""
  graphic_surface_support_access_token = true
  if (defined(global_parts_info) &&
      !defined(global_parts_info.security_access_token)) {
    graphic_surface_support_access_token = false
  }
}
rs_common_define = []

rosen_cross_platform =
    current_os == "mac" || current_os == "mingw" || current_os == "linux" ||
    current_os == "android" || current_os == "ios"

if (rosen_cross_platform) {
  rs_common_define += [ "ROSEN_TRACE_DISABLE" ]
}
