# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

## buffer_handle.so {{{
config("buffer_handle_config") {
  visibility = [ ":buffer_handle" ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Wno-error=missing-braces",
    "-Wno-error=#warnings",
  ]
}

config("buffer_handle_public_config") {
  include_dirs = [
    "//foundation/graphic/graphic_surface/interfaces/inner_api/utils",
    "../../../../drivers/peripheral/base",
    "../../../../commonlibrary/c_utils/base/include",
    "../../../../base/hiviewdfx/hilog/interfaces/native/innerkits",
    "../../../../base/notification/eventhandler/interfaces/inner_api",
    "../../../../foundation/graphic/graphic_2d/utils/log",
  ]
}

ohos_static_library("buffer_handle") {
  sources = [ "src/buffer_handle.cpp" ]

  configs = [
    ":buffer_handle_config",
    "../../../../commonlibrary/c_utils/base:utils_config",
  ]

  public_configs = [ ":buffer_handle_public_config" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]

  subsystem_name = "graphic"
  part_name = "graphic_surface"
}

group("test") {
  testonly = true
  deps = [ "test:test" ]
}
## buffer_handle.so }}}
