# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("frame_report_config") {
  visibility = [ ":*" ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
  ]
}

config("frame_report_public_config") {
  include_dirs = [ "export" ]
}

ohos_static_library("frame_report") {
  sources = [ "src/frame_report.cpp" ]

  configs = [ ":frame_report_config" ]

  public_configs = [ ":frame_report_public_config" ]

  external_deps = [
    "bounds_checking_function:libsec_shared",
    "hilog:libhilog",
    "init:libbegetutil",
    "init:libbeget_proxy",
  ]

  defines = []

  if (defined(global_parts_info) &&
      defined(global_parts_info.hdf_drivers_interface_hwsched)) {
    defines += [ "AI_SCHED_ENABLE" ]
  }

  subsystem_name = "graphic"
  part_name = "graphic_surface"
}