# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/graphic/graphic_surface/graphic_surface_config.gni")

## hebc_white_list.so {{{

config("hebc_white_list_config") {
  visibility = [ ":hebc_white_list" ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Wno-error=missing-braces",
    "-Wno-error=#warnings",
  ]
}

config("hebc_white_list_public_config") {
  include_dirs = [ "." ]
}

ohos_static_library("hebc_white_list") {
  sanitize = {
    boundary_sanitize = true
    integer_overflow = true
    ubsan = true
  }
  sources = [ "hebc_white_list.cpp" ]

  configs = [ ":hebc_white_list_config" ]
  public_configs = [ ":hebc_white_list_public_config" ]

  external_deps = [
    "c_utils:utils",
    "config_policy:configpolicy_util",
    "hilog:libhilog",
    "jsoncpp:jsoncpp",
  ]

  subsystem_name = "graphic"
  part_name = "graphic_surface"
}

## hebc_white_list.so }}}

