# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_source_set("rs_frame_report_ext_surface") {
  include_dirs = [ "include" ]
  sources = [ "src/rs_frame_report_ext.cpp" ]
  external_deps = [ "hilog:libhilog" ]

  part_name = "graphic_2d"
  subsystem_name = "graphic"
}
