# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_out_path = "graphic_surface/utils"

group("unittest") {
  testonly = true

  deps = [ ":scoped_bytrace_test" ]
}

## UnitTest scoped_bytrace_test {{{
ohos_unittest("scoped_bytrace_test") {
  module_out_path = module_out_path

  sources = [ "scoped_bytrace_test.cpp" ]

  deps = [ ":scoped_bytrace_common" ]

  external_deps = [ "graphic_surface:scoped_bytrace" ]
}

## UnitTest scoped_bytrace_test }}}

## Build scoped_bytrace_common.a {{{
config("scoped_bytrace_common_public_config") {
  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Dprivate=public",
    "-Dprotected=public",
  ]
}

ohos_static_library("scoped_bytrace_common") {
  visibility = [ ":*" ]
  testonly = true

  public_configs = [ ":scoped_bytrace_common_public_config" ]

  subsystem_name = "graphic"
  part_name = "graphic_surface"
}
## Build scoped_bytrace_common.a }}}
