# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/graphic/graphic_surface/graphic_surface_config.gni")

module_out_path = "graphic_surface/surface"

group("systemtest") {
  testonly = true

  deps = [
    ":native_window_buffer_test",
    ":surface_ipc_test",
  ]
}

## SystemTest native_window_buffer_test {{{
ohos_systemtest("native_window_buffer_test") {
  module_out_path = module_out_path

  sources = [ "native_window_buffer_test.cpp" ]

  include_dirs = [ "$graphic_surface_root/surface/include" ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  deps = [
    "$graphic_surface_root/buffer_handle:buffer_handle",
    "$graphic_surface_root/surface:surface",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]
}

## SystemTest native_window_buffer_test }}}

## SystemTest surface_ipc_test {{{
ohos_systemtest("surface_ipc_test") {
  module_out_path = module_out_path

  sources = [ "surface_ipc_test.cpp" ]

  include_dirs = [
    "$graphic_surface_root/surface/include",
    "//base/security/access_token/interfaces/innerkits/nativetoken/include",
    "//base/security/access_token/interfaces/innerkits/accesstoken/include",
    "//base/security/access_token/interfaces/innerkits/token_setproc/include",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
  ]

  deps = [
    "$graphic_surface_root/surface:surface",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]
}
## SystemTest surface_ipc_test }}}
